name:               alexbu-sh
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , hakyll-sass
                  , yaml
                  , vector
                  , data-default
                  , hashmap
                  , split
                  , text
                  , unordered-containers
  ghc-options:      -threaded
  default-language: Haskell2010
